Few changes to the colour

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <li></li>
   <li></li>
   <li></li>
-  <li><a href="#about" style="color: lightblue;">.</a></li>
+  <li><a href="#about" style="color: #1072bd;">.</a></li>
 </Navbar>
 <br><br>
 
  
 <!-------- This is the first container ----->
-<div class="panel-body" style="background-color: lightblue; margin-bottom: 25px; height: 500px; text-align: center; padding-top: 150px;">
+<div class="panel-body" style="background-color: #1072bd; margin-bottom: 25px; height: 500px; text-align: center; padding-top: 150px;">
     <ttttitle>TICTACTOE</ttttitle>
     <br><br>
     <a href="#intro">
