--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
 <!-------- This is the first container ----->
 <div class="panel-body" style="background-color: #1072bd; margin-bottom: 25px; height: 400px; text-align: center; padding-top: 60px;">
-    <ttttitle>TICTACTOE</ttttitle>
+    <ttttitle>Machine Learning XO</ttttitle>
     <br><br>
     <a href="#intro">
     <a class="active">
