Updated title for download section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
     <br><br>
     <div id="download">
-    <div style="text-align:center;"><P-button style="background-color:#1072bd;">Download Link</P-button></div>
+    <div style="text-align:center;"><P-button style="background-color:#1072bd;">Download our Java application</P-button></div>
     </div>
         
 
