Updated score on AI game

--- a/MiniMax/tictactoe.html
+++ b/MiniMax/tictactoe.html
@@ -13,7 +13,7 @@
     
     <div style="background-color: darkgray; padding:0.5px;">
     <scoreboard>
-    <p id="scores" align="middle">Scores: Player 1: 0 Player 2: 0</p>
+    <p id="scores" align="middle">Scores: Player 1: 0 Computer: 0</p>
         <p id="scores" align="middle">Player 1(X): it's your turn</p>
     </scoreboard>
     </div>
