--- a/MiniMax/tictactoe.html
+++ b/MiniMax/tictactoe.html
@@ -11,10 +11,10 @@
 
 <body>
     
-    <div style="background-color: darkgray; padding:0.5px;">
+    <div style="background-color: #cbcfd6; padding:0.5px;">
     <scoreboard>
-    <p id="scores" align="middle">Scores: Player 1: 0 Computer: 0</p>
-        <p id="scores" align="middle">Player 1(X): it's your turn</p>
+    <p id="scores" align="middle">Scores: Player 1: 0 Draws: 0 Computer: 0</p>
+        <p id="scores" align="middle">Player(O): it's your turn</p>
     </scoreboard>
     </div>
 	<div style="text-align:center;"><button onClick="startGame()">Replay</button></div>
