--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br><br>
     <a href="#game"> <P-button>Play with a friend</P-button></a><br>
     <a href="#ai"> <P-button>Play against our AI</P-button></a><br><br>
-    <a href="#download"> <P-button>Download our Java application</P-button></a>
+    <a href="#download"> <P-button>Download our desktop application</P-button></a>
 </div>  
     
   
@@ -131,9 +131,11 @@
     <div id="download">
         <div class="container" style="width:100%;">
         <div class="panel panel-default">
-    <div style="text-align:center; width:100%; padding:3px; background-color:#1072bd;"><P-button style="background-color:#1072bd;">Download our Java application</P-button></div>
-    <a href="tahmoorgame.jar"><img style="margin-top:20px; margin-bottom:20px; width: 150px;" src="https://image.freepik.com/free-icon/java_318-32027.jpg"></a><br>
-            <i style="font-size:12px;">Click on the Java logo to begin downloading our application</i>
+    <div style="text-align:center; width:100%; padding:3px; background-color:#1072bd;"><P-button style="background-color:#1072bd;">Download our desktop application</P-button></div>
+    <!--<a href="tahmoorgame.jar"><img style="margin-top:20px; margin-bottom:20px; width: 150px;" src="https://image.freepik.com/free-icon/java_318-32027.jpg"></a><br>
+            <i style="font-size:12px;">Click on the Java logo to begin downloading our application</i><br>-->
+    <a href="tahmoorgame.jar"><img style="margin-top:20px; margin-bottom:20px; width: 150px;" src="smallLogo-blue.png"></a><br>
+            <i style="font-size:12px;">Click on our logo to begin downloading our application</i>
         </div>
     
         </div></div>
