--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="panel-body">        
-      <div style="text-align:center;"><button onclick="resetGame()" style="color:white">Reset</button></div>
+      <div style="text-align:center;"><button onclick="resetGame()" style="color:white">Replay</button></div>
         
       <div style="text-align:center;">
         <select id="gameChoice">
