--- a/PlayerVSAI/playerVsAI.html
+++ b/PlayerVSAI/playerVsAI.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-
-</head>
-
-<body>
-    
-    <div style="background-color: #cbcfd6; margin-top: -10px; width:101%; margin-left:-10px; padding:0.5px; margin-bottom:-30px;">
-    <scoreboard>
-    <p id="scores" align="middle">Scores: Player 1: 0 Draws: 0 Computer: 0</p>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body onload="constructorFunc();">
+    <!---The Following div includes the scoreboard for the game results----->
+      <div style="background-color: #cbcfd6; margin-top: -10px; width:101%; margin-left:-10px; padding:0.5px; margin-bottom:-30px;">
+      <scoreboard>
+        <p id="scores" align="middle">Scores: Player 1: 0 Draws: 0 Computer: 0</p>
         <p id="scores" align="middle">Player(O): it's your turn</p>
-    </scoreboard>
+      </scoreboard>
     </div>
     <br><br>
-	<div style="text-align:center;"><button onClick="constructorFunc()">Replay</button></div>
-    <table>
-		<tr>
-			<td class="cell" id="0"></td>
-			<td class="cell" id="1"></td>
-			<td class="cell" id="2"></td>
-		</tr>
-		<tr>
-			<td class="cell" id="3"></td>
-			<td class="cell" id="4"></td>
-			<td class="cell" id="5"></td>
-		</tr>
-		<tr>
-			<td class="cell" id="6"></td>
-			<td class="cell" id="7"></td>
-			<td class="cell" id="8"></td>
-		</tr>
-	</table>
-	<div class="scoreCard">
-		<div class="text"></div>
-	</div>
-
-  <script src="script.js"></script>
-</body>
+    <div style="text-align:center;"><button onClick="constructorFunc()">Replay</button></div>
+    <!----- The following creates the table which is used as the game board.----->
+      <table>
+      <tr>
+        <td class="cell" id="0"></td>
+        <td class="cell" id="1"></td>
+        <td class="cell" id="2"></td>
+      </tr>
+      <tr>
+        <td class="cell" id="3"></td>
+        <td class="cell" id="4"></td>
+        <td class="cell" id="5"></td>
+      </tr>
+      <tr>
+        <td class="cell" id="6"></td>
+        <td class="cell" id="7"></td>
+        <td class="cell" id="8"></td>
+      </tr>
+    </table>
+      <!--- This scoreCard is the div that appears once the game has been won or drawn, thus giving the outcome of the game--->
+    <div class="scoreCard">
+      <div class="text"></div>
+    </div>
+      <script src="script.js"></script>
+  </body>
 </html>
