--- a/PlayerVSPlayer/playerVsPlayer.html
+++ b/PlayerVSPlayer/playerVsPlayer.html
@@ -1,34 +1,34 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
-    </head>
-    <body onload="updateGameType()">
-  <div class="panel-heading" style="background-color: #cbcfd6;">
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+  </head>
+  <body onload="constructorFunc()">
+    <div class="panel-heading" style="background-color: #cbcfd6;">
       <scoreboard>
-          <p id="scores" align="middle"></p>
-          <p id="instructions" align="middle"></p>
+        <p id="scores" align="middle"></p>
+        <p id="instructions" align="middle"></p>
       </scoreboard>
     </div>
-
-    <div class="panel-body">        
+    <div class="panel-body">
       <div style="text-align:center;"><button onclick="resetGame()" style="color:white">Replay</button></div>
-        
       <div style="text-align:center;">
         <select id="gameChoice">
-            <option value="0">Tic Tac Toe</option>
+          <option value="0">Tic Tac Toe</option>
           <option value="1">Gomoku</option>
-      </select>
-          
-        <Gobutton><button style="color:white; padding: 0.9px 4px;" onclick="updateGameType()">Go</button></Gobutton>
+        </select>
+        <Gobutton><button style="color:white; padding: 0.9px 4px;" onclick="constructorFunc()">Go</button></Gobutton>
         <br><br>
-        <table id="sampleTable" style="table-layout:fixed;" style="margin-bottom: 50px;"></table>
-          <div class="scoreCard"><div class="text"></div></div>
+        <table id="gameTable" style="table-layout:fixed;" style="margin-bottom: 50px;"></table>
+        <div class="scoreCard">
+          <div class="text"></div>
         </div>
-        </div>
-</body>
-        </html>
+      </div>
+    </div>
+  </body>
+</html>
