--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div style="text-align:center; width:100%; padding:3px; background-color:#1072bd;">
             <P-button style="background-color:#1072bd;">Play with a friend</P-button>
           </div>
-          <iframe src="PlayerVSPlayer/playerVsPlayer.html" style="width: 100%; height:501px;" frameBorder="0"></iframe>
+          <iframe src="PlayerVSPlayer/playerVsPlayer.html" style="width: 100%; height:940px;;" frameBorder="0"></iframe>
         </div>
       </div>
     </div>
