Updated AI class, included some new features

--- a/PlayerVSAI/playerVsAI.html
+++ b/PlayerVSAI/playerVsAI.html
@@ -32,8 +32,8 @@
       </tr>
     </table>
       <!--- This scoreCard is the div that appears once the game has been won or drawn, thus giving the outcome of the game--->
-    <div class="scoreCard">
-      <div class="text"></div>
+    <div id="scoreCard">
+      <div id="prompt"></div>
     </div>
       <script src="script.js"></script>
   </body>
