--- a/PlayerVSPlayer/playerVsPlayer.html
+++ b/PlayerVSPlayer/playerVsPlayer.html
@@ -25,8 +25,8 @@
         <Gobutton><button style="color:white; padding: 0.9px 4px;" onclick="constructorFunc()">Go</button></Gobutton>
         <br><br>
         <table id="gameTable" style="table-layout:fixed;" style="margin-bottom: 50px;"></table>
-        <div class="scoreCard">
-          <div class="text"></div>
+        <div id="scoreCard">
+          <div id="prompt"></div>
         </div>
       </div>
     </div>
