--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
     </div>
       
     <!-----This displays our logo at the bottom of the webpage----->
-    <img style="margin-top:20px; margin-bottom:20px; width: 150px; margin-left:560px;" src="/Images/smallLogo-blue.png">
+    <img id="logoBottom" src="/Images/smallLogo-blue.png">
   </body>
 </html>
